--- a/style.css
+++ b/style.css
@@ -17,10 +17,13 @@ body{
     flex-wrap: wrap;
 }
 .box{
-
+    transition: .4s;
     box-shadow: 0 0 0 1px black;
     /* width: 25%;
     height: 25%; */
     /* border:1px solid red; */
     background-color: green;
 }
+/* .box:hover{
+    background-color: red;
+} */
