--- a/style.css
+++ b/style.css
@@ -2,13 +2,28 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     background-color: white;
+    /* display: flex;
+    justify-content: space-evenly;
+    align-items: center; */
+    min-height: 100vh;
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+}
+
+.sketchMain{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    min-height: 100vh;
+    min-height: 92vh;
 }
+
 .gridContainer{
     border: 5px solid black;
     width: 600px;
@@ -16,15 +31,38 @@ body{
     display: flex;
     flex-wrap: wrap;
 }
+
 .box{
     transition: .4s;
     /* box-shadow: 0 0 0 1px red; */
     background-color: white;
 }
 
-.gridSize{
+.controlButtons{
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.controls{
     color: black;
     background-color: white;
-    border-radius: 5px;
+    width: 15rem;
+    height: 5rem;
+    font-size: large;
+}
 
+#colorInput{
+    width: 15rem;
+    height: 5rem;
+    padding: 0;    
+}
+
+.inputControls{
+    display: flex;
+    flex-direction: column;
+}
+.colorLabel{
+    font-size: 1.5rem;
+    text-align: center;
 }
